--- a/rdevguide.tex
+++ b/rdevguide.tex
@@ -33,14 +33,6 @@
   \KOMAoptions{parskip=half}}
 \makeatother
 \usepackage{xcolor}
-\IfFileExists{xurl.sty}{\usepackage{xurl}}{} % add URL line breaks if available
-\IfFileExists{bookmark.sty}{\usepackage{bookmark}}{\usepackage{hyperref}}
-\hypersetup{
-  pdftitle={R Development Guide},
-  pdfauthor={R Contribution Working Group},
-  hidelinks,
-  pdfcreator={LaTeX via pandoc}}
-\urlstyle{same} % disable monospaced font for URLs
 \usepackage{color}
 \usepackage{fancyvrb}
 \newcommand{\VerbBar}{|}
@@ -114,10 +106,18 @@
 \fi
 \usepackage[]{natbib}
 \bibliographystyle{apalike}
+\IfFileExists{bookmark.sty}{\usepackage{bookmark}}{\usepackage{hyperref}}
+\IfFileExists{xurl.sty}{\usepackage{xurl}}{} % add URL line breaks if available
+\urlstyle{same} % disable monospaced font for URLs
+\hypersetup{
+  pdftitle={R Development Guide},
+  pdfauthor={R Contribution Working Group},
+  hidelinks,
+  pdfcreator={LaTeX via pandoc}}
 
 \title{R Development Guide}
 \author{R Contribution Working Group}
-\date{2022-10-20}
+\date{2022-11-21}
 
 \begin{document}
 \maketitle
@@ -132,7 +132,7 @@
 This guide draws on documentation and articles written by the R Core Team.
 Initial chapters of the guide were developed by Saranjeet Kaur Bhogal, in a project funded by the R Foundation, mentored by Heather Turner and Michael Lawrence. This initial version was upgraded in a \href{https://github.com/rstats-gsod/gsod2022/wiki/GSOD-2022-Proposal}{Google Season of Docs 2022} project with Saranjeet Kaur Bhogal and Lluís Revilla Sancho working as technical writers managed by Nicolas Bennett and overseen by a \href{https://github.com/rstats-gsod/gsod2022/wiki/GSOD-2022-Proposal\#steering-committee}{Steering Committee} including representatives from R Core and the wider R community.
 
-This guide has benefited and continues to be benefit from varied contributions by several \href{https://github.com/r-devel/rdevguide\#contributors-}{contributors}.
+This guide has benefited and continues to benefit from varied contributions by several \href{https://github.com/r-devel/rdevguide\#contributors-}{contributors}.
 
 \href{https://creativecommons.org/licenses/by/4.0/}{\includegraphics{img/ccby.png}}
 
@@ -141,11 +141,123 @@ This project is licensed under a \href{https://creativecommons.org/licenses/by/4
 \hypertarget{introduction}{%
 \chapter{Introduction}\label{introduction}}
 
-This guide is heavily influenced by the \href{https://devguide.python.org/}{Python Developer Guide}, and is a comprehensive resource for contributing to R Core -- for both new and experienced contributors. It is maintained by the \href{/working-group}{R Contribution Working Group}. We welcome your contributions to R Core!
+This guide is heavily influenced by the \href{https://devguide.python.org/}{Python Developer Guide}, and is a comprehensive resource for contributing to base R -- for both new and experienced contributors. It is maintained by the \href{/working-group}{R Contribution Working Group}. We welcome your contributions to base R!
+
+\hypertarget{introduction-to-bugzilla}{%
+\section{Introduction to Bugzilla}\label{introduction-to-bugzilla}}
+
+Base R uses \href{https://bugs.r-project.org/}{Bugzilla} for keeping track of bugs in R. To be able use R\textquotesingle s Bugzilla for reporting or fixing bugs in R, you will first need an \protect\hyperlink{RCorePkgBug}{account} on Bugzilla. Once you have set up your account and manage to log in to Bugzilla, you are good to go.
+
+An image of the existing home page of Bugzilla is shared below:
+
+\begin{figure}
+\centering
+\includegraphics{img/bugzilla.png}
+\caption{Screenshot of the existing home page of Bugzilla.}
+\end{figure}
+
+On the home page of Bugzilla, there are various buttons and links. There are four square buttons called as:
+
+\begin{figure}
+\centering
+\includegraphics{img/squarebuttons.png}
+\caption{Screenshot of the four square buttons on the home page of Bugzilla.}
+\end{figure}
+
+\begin{enumerate}
+\def\labelenumi{\arabic{enumi}.}
+\item
+  \href{https://bugs.r-project.org/enter_bug.cgi}{File a bug}: You will have to log in to Bugzilla to file a bug using this button
+\item
+  \href{https://bugs.r-project.org/query.cgi}{Search}: When you click this button you will get a page with `Simple Search' and `Advanced Search' options. Either of the search options could be used depending on what you are looking for.
+\item
+  \href{https://bugs.r-project.org/?GoAheadAndLogIn=1}{Log In}: Provide the appropriate email address and password here to log in to Bugzilla.
+\item
+  \href{https://bugzilla.readthedocs.io/en/latest/using/index.html}{Documentation}: Provides a user guide for R\textquotesingle s Bugzilla.
+\end{enumerate}
+
+There are also self-explanatory links available on the home page to:
+
+\begin{enumerate}
+\def\labelenumi{\arabic{enumi}.}
+\item
+  \href{https://bugs.r-project.org/enter_bug.cgi}{Enter a new bug report}
+\item
+  \href{https://bugs.r-project.org/buglist.cgi?bug_file_loc_type=allwordssubstr\&bug_status=NEW\&bug_status=ASSIGNED\&bug_status=CONFIRMED\&bug_status=REOPENED\&bug_status=UNCONFIRMED\&bugidtype=include\&chfieldto=Now\&cmdtype=doit\&emailassigned_to1=1\&emailassigned_to2=1\&emailcc2=1\&emailreporter2=1\&emailtype1=substring\&emailtype2=substring\&field0-0-0=noop\&long_desc_type=substring\&order=bugs.delta_ts\%20desc\&query_format=advanced\&short_desc_type=allwordssubstr\&type0-0-0=noop}{Show open bugs new-to-old}
+\item
+  \href{https://bugs.r-project.org/query.cgi}{Search existing bug reports}
+\end{enumerate}
+
+A \href{https://bugs.r-project.org/page.cgi?id=quicksearch.html}{quick search} bar is available on the home page where you can enter a bug \# to search or some search terms.
+
+\begin{figure}
+\centering
+\includegraphics{img/quicksearch.png}
+\caption{Screenshot of the quick search bar on the home page of Bugzilla.}
+\end{figure}
+
+There is also a section for Common Queries on the home page which includes links to bugs reported and changed in the last 24 hours and last 7 days.
+
+\begin{figure}
+\centering
+\includegraphics{img/commonquery.png}
+\caption{Screenshot of the Common Queries section on the home page of Bugzilla.}
+\end{figure}
+
+\hypertarget{quick-start-to-the-guide}{%
+\section{Quick start to the guide}\label{quick-start-to-the-guide}}
+
+The guide is intended to be a comprehensive resource for contributing to base R. There are a number of chapters and chapter sections devised to help with the process of contributing to base R:
+
+\begin{enumerate}
+\def\labelenumi{\arabic{enumi}.}
+\tightlist
+\item
+  The \protect\hyperlink{GetStart}{Getting Started} covers the instructions on how to install R in Windows and the tools required to build R and R packages in Windows.
+\end{enumerate}
+
+\begin{enumerate}
+\def\labelenumi{\arabic{enumi}.}
+\setcounter{enumi}{1}
+\item
+  The \protect\hyperlink{BugTrack}{Bug Tracking} and the \protect\hyperlink{ReviewBugs}{Reviewing Bugs} chapters discuss how to find bugs in R and how to review bug reports that are submitted to Bugzilla.
+\item
+  The \protect\hyperlink{FindSource}{Finding the Source} chapter discusses how to have an overview of the R codebase like finding the implementation of a base function written in R and/or the primitive implementation written in C.
+\item
+  The \protect\hyperlink{FixBug}{Lifecycle of a Patch} chapter discusses how to create a patch to propose a bug fix.
+\item
+  The \protect\hyperlink{Doc}{Documenting R} chapter describes the styleguide for R's documentation, how to document for R, and report and review bugs (and/or suggest corrections for them) in the existing documentation.
+\item
+  How to test pre-release versions of R is discussed in the chapter on \protect\hyperlink{TestRVer}{Testing Pre-release R Versions}.
+\item
+  The \protect\hyperlink{CoreDev}{R Core Developers} chapter contains a list of the former and current members of the R Core team who have write access to the R source.
+\item
+  To get more information on how to find assistance to resolve issues faced while working on R, refer to the \protect\hyperlink{WhereToGetHelp}{Where to Get Help} chapter.
+\item
+  To keep up with the developments in R refer to some of the resources available in the \protect\hyperlink{News}{News and Announcements}
+\item
+  Resources and tools that may be relevant for R developers are available in the \protect\hyperlink{DevTools}{Developer Tools} chapter.
+\end{enumerate}
+
+\hypertarget{overview-of-different-ways-of-contributing-to-base-r-project}{%
+\section{Overview of different ways of contributing to base R Project}\label{overview-of-different-ways-of-contributing-to-base-r-project}}
+
+One can contribute to the base R project in a number of different ways. Some of them are listed below:
+
+\begin{enumerate}
+\def\labelenumi{\arabic{enumi}.}
+\tightlist
+\item
+  Contributing to bug fixing: Refer \protect\hyperlink{BugTrack}{Bug Tracking} and \protect\hyperlink{ReviewBugs}{Reviewing Bugs}.
+\item
+  Contributing to translations: Refer \protect\hyperlink{}{Translations}.
+\item
+  Testing R before release: Refer \protect\hyperlink{TestRVer}{Testing Pre-release R Versions}.
+\end{enumerate}
 
 \hypertarget{how-to-contribute-to-this-guide}{%
-\section*{How to contribute to this guide?}\label{how-to-contribute-to-this-guide}}
-\addcontentsline{toc}{section}{How to contribute to this guide?}
+\section*{How to contribute to this guide itself?}\label{how-to-contribute-to-this-guide}}
+\addcontentsline{toc}{section}{How to contribute to this guide itself?}
 
 This guide is built using bookdown which makes editing it easier, provided you have a GitHub account (sign-up at \href{https://github.com/}{github.com}). After you log-in to GitHub, click on the `Edit' icon highlighted with a red ellipse in the image below. This will take you to an editable version of the the source R Markdown file that generated the page you are on:
 
@@ -155,94 +267,261 @@ This guide is built using bookdown which makes editing it easier, provided you h
 \caption{Screenshot of the toolbar in the HTML version of the guide, with the Edit button (pencil and paper icon) circled in red.}
 \end{figure}
 
-Use the \href{https://github.com/forwards/rdevguide/issues}{issue tracker} to raise an issue about the guide's content or to make a feature request.
+Use the \href{https://github.com/r-devel/rdevguide/issues}{issue tracker} to raise an issue about the guide's content or to make a feature request.
 
-Maintainers and contributors are requested to follow this project's \href{https://github.com/forwards/rdevguide/blob/master/CONDUCT.md}{code of conduct}.
+Maintainers and contributors are requested to follow this project's \href{https://github.com/r-devel/rdevguide/blob/main/CONDUCT.md}{code of conduct}.
 
 \hypertarget{GetStart}{%
-\chapter{Getting Started}\label{GetStart}}
+\chapter{R Patched and Development Versions}\label{GetStart}}
 
-These instructions cover how to install R in Windows. The tools required to build R and R packages in Windows are also discussed.
+These instructions cover how to install R from source or from binaries.
+Contributors will typically need to work with the patched or development versions of R.
+This chapter describes where the source code for these versions can be found and how to install these versions from the source or the binary builds (where available).
+The tools required to build R and R packages are also discussed.
+For the most up to date and complete instructions you can check the \href{https://cran.r-project.org/doc/manuals/r-devel/R-admin.html}{R installation and administration manual} .
 
-\hypertarget{general-instructions}{%
-\section{General instructions}\label{general-instructions}}
+\hypertarget{the-r-source-code}{%
+\section{The R Source Code}\label{the-r-source-code}}
+
+R uses \href{https://subversion.apache.org/}{svn} as a version control tool hosted at \url{https://svn.r-project.org/R/} and uses a `major.minor.patchlevel' version numbering scheme\footnote{Also known as \href{https://en.wikipedia.org/wiki/Software_versioning\#Semantic_versioning}{semantic versioning}}.
+
+There are three releases of R available to install:
+
+\begin{itemize}
+\item
+  The latest official release (\texttt{r-release}), either major version x.0.0 or minor version x.y.0, for example: 3.0.0 or 3.2.0
+\item
+  The patched release (\texttt{r-patched}), for example 3.0.1 or 3.2.1 and
+\item
+  The development release (\texttt{r-devel}) : continually developed version moving from r-release to next major/minor version (x + 1).0.0 or x.(y + 1).0 a few weeks before release (at the start of the ``GRAND FEATURE FREEZE'').
+\end{itemize}
+
+The source code of released versions of R can be found at \href{https://svn.r-project.org/R/tags/}{R/tags}, the patched versions are at \href{https://svn.r-project.org/R/branches/}{R/branch}.
+
+The \texttt{r-devel} at \href{https://svn.r-project.org/R/trunk}{R/trunk} is the next minor or eventual major release development version of R.
+Bug fixes and new features are introduced in \texttt{r-devel} first.
+If the change meets the \href{https://developer.r-project.org/devel-guidelines.txt}{development guidelines} R Core will also make the change in \texttt{r-patched}.
+
+\hypertarget{prerequisites}{%
+\section{Prerequisites}\label{prerequisites}}
+
+To install from the source code you will need the source code and the dependencies of R.
+
+Retrieve R source code via into \texttt{TOP\_SRCDIR}, note that we retrieve the r-devel source code:
+
+\begin{verbatim}
+  export TOP_SRCDIR="$HOME/Downloads/R"
+  svn checkout https://svn.r-project.org/R/trunk/ $TOP_SRCDIR
+\end{verbatim}
+
+If you need to install svn you can use your distribution's package manager to install it.
+
+\hypertarget{ubuntu}{%
+\subsection{Ubuntu}\label{ubuntu}}
+
+In Ubuntu you can use :
+
+\begin{verbatim}
+  sudo apt-get install -y \
+      bash-completion \
+      bison \
+      debhelper-compat (= 11) \
+      default-jdk \
+      g++ (>= 4:4.9.2-2) \
+      gcc (>= 4:4.9.2-2) \
+      gfortran (>= 4:4.9.2-2) \
+      groff-base \
+      libblas-dev \
+      libbz2-dev \
+      libcairo2-dev \
+      libcurl4-dev \
+      libcurl4-openssl-dev \
+      libjpeg-dev \
+      liblapack-dev \
+      liblzma-dev \
+      libncurses5-dev \
+      libpango1.0-dev \
+      libpcre2-dev \
+      libpcre3-dev \
+      libpng-dev \
+      libreadline-dev \
+      libtiff5-dev \
+      libx11-dev \
+      libxt-dev \
+      mpack \
+      tcl8.6-dev \
+      texinfo (>= 4.1-2) \
+      texlive-base \
+      texlive-extra-utils \
+      texlive-fonts-extra \
+      texlive-fonts-recommended \
+      texlive-latex-base \
+      texlive-latex-extra \
+      texlive-latex-recommended \
+      texlive-plain-generic \
+      tk8.6-dev \
+      x11proto-core-dev \
+      xauth \
+      xdg-utils \
+      xfonts-base \
+      xvfb \
+      zlib1g-dev
+\end{verbatim}
+
+\hypertarget{windows}{%
+\subsection{Windows}\label{windows}}
+
+Install MSYS and rtools42
+
+\hypertarget{macos}{%
+\subsection{macOS}\label{macos}}
+
+\hypertarget{building-r-in-linux}{%
+\section{Building R in Linux}\label{building-r-in-linux}}
+
+Here are the basic steps intended as a checklist.
+For complete instructions please see the section in \href{https://cran.r-project.org/doc/manuals/r-devel/R-admin.html\#Installing-R-under-Unix_002dalikes}{R-admin}.
 
 \begin{enumerate}
 \def\labelenumi{\arabic{enumi}.}
 \item
-  If you install the latest version or R-patched or R-devel, it will not over-write the previous installation(s) in your Windows machine.
-\item
-  R uses a `major.minor.patchlevel' version numbering scheme. Accordingly there are three main releases of R available to install:
+  Download the latest recommended packages\footnote{Recommended packages are not in the subversion repository.}:
 
-  \begin{itemize}
-  \item
-    The official release (\texttt{r-release}),
-  \item
-    The patched release (\texttt{r-patched}), and
-  \item
-    The development release (\texttt{r-devel}).
-  \end{itemize}
+\begin{verbatim}
+$TOP_SRCDIR/tools/rsync-recommended
+\end{verbatim}
+\item
+  Create the build directory in the \texttt{BUILDDIR}:
+
+\begin{verbatim}
+export BUILDDIR="$HOME/bin/R"
+mkdir -p $BUILDDIR
+cd $BUILDDIR
+\end{verbatim}
+\item
+  Configure the R installation (with \texttt{-\/-enable-R-shlib} so that RStudio IDE can use it):
+
+\begin{verbatim}
+$TOP_SRCDIR/configure --enable-R-shlib
+\end{verbatim}
+\item
+  Build R :
+
+\begin{verbatim}
+make 
+\end{verbatim}
+\item
+  Check that R works as expected:
+
+\begin{verbatim}
+make check
+\end{verbatim}
+
+  There are other checks you can run:
+
+\begin{verbatim}
+make check-devel
+make check-recommended
+\end{verbatim}
 \end{enumerate}
 
-The \texttt{r-devel} is the next minor or eventually major release development version of R. Mostly, bug fixes are introduced in \texttt{r-patched}, while \texttt{r-devel} is for introducing new features.
+If we don't want to build R in a different directory than the source code we can simply use:
+
+\begin{verbatim}
+cd $TOP_SRCDIR 
+svn update
+tools/rsync-recommended
+$TOP_SRCDIR/configure  --enable-R-shlib
+make 
+make check
+\end{verbatim}
+
+Once you successfully build R from source you can modify R source code to fix an issue: Prepare a patch (See \href{https://www.r-project.org/bugs.html\#how-to-submit-patches}{this guide}) and after checking that R works as intended (\texttt{make\ check-devel}) submit the patch for the R core consideration.
+(See the \protect\hyperlink{FixBug}{lifecycle of a patch} chapter).
+
+To use the r-devel version in RStudio to you can do the following:
+
+\begin{verbatim}
+export RSTUIDO_WHICH_R="$BUILDDIR/bin/R"
+cd $TOP_SRCDIR
+rstudio
+\end{verbatim}
+
+\hypertarget{windows-1}{%
+\section{Windows}\label{windows-1}}
 
 \hypertarget{installR}{%
-\section{Installing R}\label{installR}}
+\subsection{Installing R}\label{installR}}
 
 \begin{enumerate}
 \def\labelenumi{\arabic{enumi}.}
 \item
-  The binary builds of R for Windows can be downloaded and installed from \href{https://cran.r-project.org/bin/windows/base/}{here}. Along with the link to the latest stable release, this page also contains links to the binary builds of r-patched and r-devel.
+  The binary builds of R for Windows can be downloaded and installed from \href{https://cran.r-project.org/bin/windows/base/}{here}.
+  Along with the link to the latest stable release, this page also contains links to the binary builds of r-patched and r-devel.
 \item
   Click on the download links to download an executable installer.
 \item
-  Select the language while installing, read the GNU general public license information, and select the destination location to start the installation. You will be prompted to select components at this stage: \texttt{User\ installation}, \texttt{32-bit\ User\ installation}, \texttt{64-bit\ User\ installation}, or \texttt{Custom\ installation}. The default option may be chosen for the questions from this step onwards to complete the installation.
+  Select the language while installing, read the GNU general public license information, and select the destination location to start the installation.
+  You will be prompted to select components at this stage: \texttt{User\ installation}, \texttt{32-bit\ User\ installation}, \texttt{64-bit\ User\ installation}, or \texttt{Custom\ installation}.
+  The default option may be chosen for the questions from this step onwards to complete the installation.
 \end{enumerate}
 
 \hypertarget{building-r-and-r-packages}{%
-\section{Building R and R packages}\label{building-r-and-r-packages}}
+\subsection{Building R and R packages}\label{building-r-and-r-packages}}
 
 \hypertarget{what-tools-do-you-need-to-build-r-from-source-on-windows}{%
-\subsection{What tools do you need to build R from source on Windows?}\label{what-tools-do-you-need-to-build-r-from-source-on-windows}}
+\subsubsection{What tools do you need to build R from source on Windows?}\label{what-tools-do-you-need-to-build-r-from-source-on-windows}}
 
 \begin{enumerate}
 \def\labelenumi{\arabic{enumi}.}
 \item
   \href{https://github.com/r-windows/docs/blob/master/faq.md\#what-is-rtools}{RTools} is the toolchain bundle that you can use to build R base and R packages containing compiled code, on Windows.
 \item
-  You also need a distribution of LaTeX installed for building R and checking packages. The MiKTeX distribution of LaTeX that is used on CRAN can be downloaded from \url{https://miktex.org}.
+  You also need a distribution of LaTeX installed for building R and checking packages.
+  The MiKTeX distribution of LaTeX that is used on CRAN can be downloaded from \url{https://miktex.org}.
 \end{enumerate}
 
 \hypertarget{how-to-setup-rtools}{%
-\subsection{\texorpdfstring{How to setup \texttt{RTools}?}{How to setup RTools?}}\label{how-to-setup-rtools}}
+\subsubsection{\texorpdfstring{How to setup \texttt{RTools}?}{How to setup RTools?}}\label{how-to-setup-rtools}}
 
 \begin{enumerate}
 \def\labelenumi{\arabic{enumi}.}
 \item
-  The latest version of \texttt{RTools} can be downloaded from \url{https://cran.r-project.org/bin/windows/Rtools/} and run in the Windows-style installer. You will need to know if you have a 32-bit or 64-bit Windows machine (right-click \texttt{This\ PC} in Windows Explorer and check the properties if you are unsure).
+  The latest version of \texttt{RTools} can be downloaded from \url{https://cran.r-project.org/bin/windows/Rtools/} and run in the Windows-style installer.
+  You will need to know if you have a 32-bit or 64-bit Windows machine (right-click \texttt{This\ PC} in Windows Explorer and check the properties if you are unsure).
 \item
   Don't forget to add \texttt{RTools} to the path as documented on the download page.
 \end{enumerate}
 
 \hypertarget{how-to-build-r}{%
-\subsection{How to build R?}\label{how-to-build-r}}
+\subsubsection{How to build R?}\label{how-to-build-r}}
 
-To build R for Windows using \texttt{RTools} follow the instructions in this \href{https://github.com/r-windows/r-base\#readme}{README} file. There are two options available to build R. One is the quick development build and the other option is the full installer build.
+To build R for Windows using \texttt{RTools} follow the instructions in this \href{https://github.com/r-windows/r-base\#readme}{README} file.
+There are two options available to build R.
+One is the quick development build and the other option is the full installer build.
 
-For development and testing, you need only the quick development build. The quick build avoids building the manuals, which are generally not needed for development and testing.
+For development and testing, you need only the quick development build.
+The quick build avoids building the manuals, which are generally not needed for development and testing.
 
-However, even for the quick build there are some \href{https://github.com/r-windows/r-base/blob/master/quick-build.sh}{default requirements}. For instance, MikTeX is to be installed in \texttt{C:/Program\ Files} and you have 64-bit R. If necessary, these defaults can be customised. The installation path of MikTex can be customised \href{https://github.com/r-windows/r-base/blob/50a229fc76c50a5fb42c0daa367466aaf2318171/quick-build.sh\#L13}{here} whereas the Windows bit can be customised \href{https://github.com/r-windows/r-base/blob/50a229fc76c50a5fb42c0daa367466aaf2318171/quick-build.sh\#L6}{here}.
+However, even for the quick build there are some \href{https://github.com/r-windows/r-base/blob/master/quick-build.sh}{default requirements}.
+For instance, MikTeX is to be installed in \texttt{C:/Program\ Files} and you have 64-bit R.
+If necessary, these defaults can be customised.
+The installation path of MikTex can be customised \href{https://github.com/r-windows/r-base/blob/50a229fc76c50a5fb42c0daa367466aaf2318171/quick-build.sh\#L13}{here} whereas the Windows bit can be customised \href{https://github.com/r-windows/r-base/blob/50a229fc76c50a5fb42c0daa367466aaf2318171/quick-build.sh\#L6}{here}.
 
-If you are a maintainer of the Windows CRAN releases then, the full installer build is available for building the complete installer as it appears on CRAN. It will build both the 32-bit and 64-bit R, the pdf manuals, and the installer program. You will use this to create the binary builds and not when building R from the source yourself.
+If you are a maintainer of the Windows CRAN releases then, the full installer build is available for building the complete installer as it appears on CRAN.
+It will build both the 32-bit and 64-bit R, the pdf manuals, and the installer program.
+You will use this to create the binary builds and not when building R from the source yourself.
 
 \hypertarget{how-to-download-the-r-sources-directly-or-from-the-svn-repository}{%
-\section{How to download the R sources directly or from the svn repository?}\label{how-to-download-the-r-sources-directly-or-from-the-svn-repository}}
+\subsection{How to download the R sources directly or from the svn repository?}\label{how-to-download-the-r-sources-directly-or-from-the-svn-repository}}
 
 \begin{itemize}
 \item
   To download the R sources on Windows, you can use \texttt{tar} from the RStudio terminal.
 \item
-  If you want to checkout the sources from svn, it is probably best to install an SVN client. Either TortoiseSVN (\url{https://tortoisesvn.net/}, command line tool, and Windows Explorer integration) or SlikSVN (\url{https://sliksvn.com/download/}, just the command line tool) is recommended. They have simple Windows installers and you can use svn straight-away from Windows cmd or RStudio terminal.
+  If you want to checkout the sources from svn, it is probably best to install an SVN client.
+  Either TortoiseSVN (\url{https://tortoisesvn.net/}, command line tool, and Windows Explorer integration) or SlikSVN (\url{https://sliksvn.com/download/}, just the command line tool) is recommended.
+  They have simple Windows installers and you can use svn straight-away from Windows cmd or RStudio terminal.
 \end{itemize}
 
 \hypertarget{see-also}{%
@@ -262,8 +541,8 @@ If you are a maintainer of the Windows CRAN releases then, the full installer bu
   \href{https://cran.r-project.org/doc/FAQ/R-FAQ.html}{R FAQ}
 \end{enumerate}
 
-\hypertarget{bug-tracking}{%
-\chapter{Bug Tracking}\label{bug-tracking}}
+\hypertarget{BugTrack}{%
+\chapter{Bug Tracking}\label{BugTrack}}
 
 \hypertarget{what-is-a-bug-in-r}{%
 \section{What is a bug in R?}\label{what-is-a-bug-in-r}}
@@ -450,8 +729,8 @@ If you like to see how bugs are reported on Bugzilla, here are some examples:
   \href{https://bugs.r-project.org/bugzilla/page.cgi?id=bug-writing.html}{Bugzilla guidelines of reporting a bug}
 \end{enumerate}
 
-\hypertarget{reviewing-bugs}{%
-\chapter{Reviewing Bugs}\label{reviewing-bugs}}
+\hypertarget{ReviewBugs}{%
+\chapter{Reviewing Bugs}\label{ReviewBugs}}
 
 \hypertarget{how-you-can-help-to-review-bug-reports}{%
 \section{How you can help to review bug reports?}\label{how-you-can-help-to-review-bug-reports}}
@@ -522,8 +801,8 @@ There is a \texttt{\#bug-reporting} channel on the \href{https://r-contributors.
   \href{https://developer.r-project.org/Blog/public/2019/10/09/r-can-use-your-help-reviewing-bug-reports/}{Reviewing bug reports: Blog}
 \end{enumerate}
 
-\hypertarget{finding-the-source}{%
-\chapter{Finding the Source}\label{finding-the-source}}
+\hypertarget{FindSource}{%
+\chapter{Finding the Source}\label{FindSource}}
 
 This chapter discusses how you can have an overview of the R codebase. For instance, where to find the implementation of a base function written in R and where to find a primitive implementation written in C. You may want to find the source code of a function just out of curiosity or maybe to gain more insight into what a particular function is actually doing. Whatever be the case, reading the source code will help you to learn a lot about any function.
 
@@ -787,12 +1066,12 @@ It may take longer before your patch is accepted and applied or rejected, someti
   \href{https://www.r-project.org/bugs.html\#how-to-submit-patches}{Submitting patches}
 \end{enumerate}
 
-\hypertarget{documenting-r}{%
-\chapter{Documenting R}\label{documenting-r}}
+\hypertarget{Doc}{%
+\chapter{Documenting R}\label{Doc}}
 
 The R language has a substantial body of documentation, much of which is contributed by various authors. The help files for R functions are written in `R documentation' (.Rd) file format. It is a simple markup language with close resemblance to LaTeX. The .Rd file format can be further processed into a variety of formats, including LaTeX, HTML, and plain text.
 
-This chapter describes the styleguide for R's documentation, how to document for R, report and review bugs (and suggest corrections for them) in the existing documentation. If you are interested in contributing to R's documentation, your contributions are more than welcome.
+This chapter describes the styleguide for R's documentation, how to document for R, report and review bugs (and/or suggest corrections for them) in the existing documentation. If you are interested in contributing to R's documentation, your contributions are more than welcome.
 
 \hypertarget{introduction-2}{%
 \section{Introduction}\label{introduction-2}}
@@ -935,7 +1214,7 @@ If you decide to proofread, read a section of the documentation from start to fi
 \hypertarget{helping-with-the-developers-guide}{%
 \section{Helping with the Developer's Guide}\label{helping-with-the-developers-guide}}
 
-The Developer's Guide (what you are reading now) uses the same process as the main R documentation, except for some small differences. The source lives in a \href{https://github.com/forwards/rdevguide}{GitHub repository} and bug reports should be submitted to the \href{https://github.com/forwards/rdevguide/issues}{devguide GitHub tracker}.
+The Developer's Guide (what you are reading now) uses the same process as the main R documentation, except for some small differences. The source lives in a \href{https://github.com/r-devel/rdevguide/}{GitHub repository} and bug reports should be submitted to the \href{https://github.com/r-devel/rdevguide/issues}{devguide GitHub tracker}.
 
 Our dev guide workflow uses continuous integration and deployment so changes to the dev guide are normally published when the pull request is merged. \protect\hyperlink{how-to-contribute-to-this-guide}{How to contribute to this guide from the introduction.}
 
@@ -1131,8 +1410,8 @@ They are stored in the R sources at \texttt{./src/library/translations/inst} in 
   Statistical terms glossary
 \end{itemize}
 
-\hypertarget{testing-pre-release-r-versions}{%
-\chapter{Testing Pre-release R Versions}\label{testing-pre-release-r-versions}}
+\hypertarget{TestRVer}{%
+\chapter{Testing Pre-release R Versions}\label{TestRVer}}
 
 This chapter is inspired from the blog on \href{https://developer.r-project.org/Blog/public/2021/04/28/r-can-use-your-help-testing-r-before-release/index.html}{testing R before release} and discusses how you can help with testing of pre-release versions of R.
 
@@ -1189,8 +1468,8 @@ When you are adding tests to an existing test file, it is also recommended that 
 
 Benchmarking is useful to test that a change does not degrade performance.
 
-\hypertarget{r-core-developers}{%
-\chapter{R Core Developers}\label{r-core-developers}}
+\hypertarget{CoreDev}{%
+\chapter{R Core Developers}\label{CoreDev}}
 
 This page lists the former and current members of the R Core team who have write access to the R source.
 
@@ -1333,8 +1612,8 @@ Please avoid cross-posting to both the R-package-devel and the R-devel mailing l
 
 If you strongly suspect you have come across a bug (be it in the build process, or in other areas), then \protect\hyperlink{ReportBug}{report it on Bugzilla}.
 
-\hypertarget{news-and-announcements}{%
-\chapter{News and Announcements}\label{news-and-announcements}}
+\hypertarget{News}{%
+\chapter{News and Announcements}\label{News}}
 
 Here are some resources that can be useful to keep up with the developments in R:
 
@@ -1369,8 +1648,8 @@ Updates about conferences actively supported or endorsed by The R Foundation can
 
 Follow \href{https://twitter.com/R_dev_news}{@R\_dev\_news} on Twitter for the \href{https://developer.r-project.org/RSSfeeds.html}{R development updates} and \href{https://developer.r-project.org/Blog/public/}{blog post} announcements.
 
-\hypertarget{developer-tools}{%
-\chapter{Developer Tools}\label{developer-tools}}
+\hypertarget{DevTools}{%
+\chapter{Developer Tools}\label{DevTools}}
 
 This chapter lists resources and tools which R developers may use. Here we will go over some commonly used tools that are relevant to R's workflow. As there are several ways to accomplish these tasks, this chapter reflects methods suitable for new contributors. Experienced contributors may desire a different approach.
 
