--- a/rdevguide.tex
+++ b/rdevguide.tex
@@ -117,7 +117,7 @@
 
 \title{R Development Guide}
 \author{R Contribution Working Group}
-\date{2023-05-10}
+\date{2023-05-17}
 
 \begin{document}
 \maketitle
@@ -1390,6 +1390,37 @@ The language used in the documentations should follow these basic rules:
 \end{enumerate}
 
 Extensive details of writing R documentation files can be found \href{https://cran.r-project.org/doc/manuals/r-release/R-exts.html\#Writing-R-documentation-files}{here}.
+
+\hypertarget{r-manuals}{%
+\section{R manuals}\label{r-manuals}}
+
+The \href{https://cran.r-project.org/manuals.html}{R manuals} are a part of the \href{https://svn.r-project.org/R/trunk/doc/manual/}{R sources}. Hence, bug reports/patches can also be submitted via Bugzilla, e.g.~\href{https://bugs.r-project.org/bugzilla/show_bug.cgi?id=15221}{Bug 15221 - R-admin/`Installing R under Windows': Missing argument name}. Note that they are typically referred to by their file names as listed below:
+
+\begin{longtable}[]{@{}ll@{}}
+\toprule()
+Manual & Nickname \\
+\midrule()
+\endhead
+An Introduction to R & ``R-intro'' \\
+R Data Import/Export & ``R-data'' \\
+R Installation and Administration & ``R-admin'' \\
+Writing R Extensions & ``R-exts'' \\
+The R language definition & ``R-lang'' \\
+R Internals & ``R-ints'' \\
+\bottomrule()
+\end{longtable}
+
+Note:
+
+\begin{itemize}
+\tightlist
+\item
+  Every manual is associated with a particular version of R, so you should check the version before reporting a bug.
+\item
+  The \href{https://cran.r-project.org/manuals.html}{R manuals} page has links for the \href{https://contributor.r-project.org/rdevguide/GetStart.html\#the-r-source-code}{three types of release}: \texttt{r-release}, \texttt{r-patched} and \texttt{r-devel}. These nicknames appear in the URLs, e.g.~\url{https://cran.r-project.org/doc/manuals/r-release/R-intro.html}.
+\item
+  The \href{https://www.gnu.org/software/texinfo/}{Texinfo manual} should be referred to for \href{https://www.gnu.org/software/texinfo/manual/texinfo/texinfo.html}{how to mark up text}.
+\end{itemize}
 
 \hypertarget{helping-with-documentation}{%
 \section{Helping with documentation}\label{helping-with-documentation}}
